Se le aplico algo de JAVASCRIPT al slider
Medienta el archivo .JS se le aplico a la parte del slider un poco de animacion al momento de darle al botones de NEXT y BEFORE para que cambiaran  a diferentes slider

--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -291,7 +291,7 @@ body {
 .testimony__body--show{
     pointer-events: unset;
     opacity: 1;
-    transition: opacity 1.5 ease-in-out;
+    transition: opacity 1.5s ease-in-out;
 }
 
 .testimony__img{
