--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -334,8 +334,16 @@ body {
 
 .questions__padding {
     padding: 0;
-    transition: padding .2s;
+    transition: padding .3s;
     border: 1px solid #5454d4;
+    border-radius: 6px;
+}
+
+.questions__padding1 {
+    padding: 0;
+    transition: padding .3s;
+    border: 1px solid green;
+    border-radius: 6px;
 }
 
 .questions__padding--add{
@@ -343,13 +351,42 @@ body {
 }
 
 .questions__answer{
+    padding: 0 30px;
+    overflow: hidden;
+}
+
+.questions__title{
+    display: flex;
+    font-size: 20px;
     padding: 30px 0 30px;
     cursor: pointer;
-    font-size: 20px;
     color: var(--colot-title);
+    justify-content: space-between;
 }
 
 .questions__arrow{
     border-radius: 50%;
     background-color: var(--colot-title);
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: flex-end;
+    margin-left: 10px;
+    transition: transform .3s;
+}
+
+.questions__arrow--rotate{
+    transform: rotate(180deg);
+}
+
+.questions__show {
+    text-align: left;
+    height: 0;
+    transition: height .3s;
+}
+
+.questions__img{
+    display: block;
 }
