--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -362,10 +362,9 @@ body {
 }
 
 .questions__padding1 {
-    padding: 0;
-    transition: padding .3s;
-    border: 1px solid #00992b;
-    border-radius: 6px;
+    transition: 0.1s;
+    border: 1px solid #1fde82;
+    box-shadow: 0 4px 10px #1fde82;
 }
 
 .questions__padding--add {
@@ -413,3 +412,155 @@ body {
     display: block;
 }
 
+.questions__copy {
+    width: 60%;
+    margin: 0 auto;
+    margin-bottom: 30px;
+}
+
+/* Footer */
+
+.footer {
+    background-color: #1D293F;
+}
+
+.footer__title {
+    font-weight: 300;
+    font-size: 2rem;
+    margin-bottom: 30px;
+}
+
+.footer__title,
+.footer__newsletter {
+    color: white;
+
+}
+
+.footer__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid purple;
+    padding-bottom: 60px;
+}
+
+.nav--footer {
+    padding-bottom: 20px;
+    display: grid;
+    gap: 1em;
+    grid-auto-flow: row;
+    height: 100%;
+}
+
+.nav__link--footer {
+    display: flex;
+    margin: 0;
+    margin-right: 20px;
+    flex-wrap: wrap;
+}
+
+.footer__inputs {
+    margin-top: 10px;
+    display: flex;
+    overflow: hidden;
+}
+
+.footer__input {
+    background-color: white;
+    height: 50px;
+    display: block;
+    padding-left: 10px;
+    border-radius: 6px;
+    font-size: 1rem;
+    outline: none;
+    border: none;
+    margin-right: 16px;
+    margin-bottom: 50px;
+}
+
+.footer__input:focus {
+    border: 2px solid #1fde82;
+    box-shadow: 0 1px 1px #1fde82;
+
+}
+
+.footer__input:hover {
+    border: 2px solid #1fde82;
+    box-shadow: 0 1px 1px #1fde82;
+
+}
+
+.footer__submit {
+    margin-left: auto;
+    display: inline-block;
+    height: 50px;
+    padding: 0 20px;
+    background-color: #2091f9;
+    border: none;
+    font-size: 1rem;
+    color: white;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.footer__submit:hover {
+    text-shadow: 1px 1px 6px #fff;
+}
+
+.footer__copy {
+    --padding-container: 30px 0;
+    text-align: center;
+    color: white;
+}
+
+.footer__copyright {
+    font-weight: 300;
+}
+
+.footer__icons {
+    display: inline-flex;
+    margin-bottom: 10px;
+}
+
+.footer__img {
+    width: 30px;
+}
+
+/* MEDIA QUERIES */
+
+@media (max-width:800px){
+    .nav__menu{
+        display: block;
+    }
+
+    .nav__link--menu{
+        position: fixed;
+        background-color: black;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        z-index: 100;
+        opacity: 0;
+        pointer-events: none;
+        transition: .7s opacity;
+    }
+
+    .nav__link--show{
+        --show: block;
+        opacity: 1;
+        pointer-events: unset;
+    }
+
+    .nav__close{
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        width: 30px;
+        cursor: pointer;
+    }
+}
