--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -43,7 +43,6 @@ body {
     z-index: -1;
 }
 
-
 /* NAV */
 
 .nav {
@@ -76,7 +75,6 @@ body {
 .nav__items {
     list-style: none;
 }
-
 
 .nav__links {
     color: white;
@@ -133,7 +131,6 @@ body {
     text-shadow: 1px 1px 6px #fff;
 }
 
-
 /* About */
 
 .about {
@@ -177,7 +174,8 @@ body {
 
 .knowledge {
     background-color: #e5e5f7;
-    background-image: radial-gradient(#444cf7 0.5px, transparent 0.5px), radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
+    background-image: radial-gradient(#444cf7 0.5px, transparent 0.5px),
+        radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
     background-size: 20px 20px;
     background-position: 0 0, 10px 10px;
     overflow: hidden;
@@ -276,7 +274,7 @@ body {
     background-color: var(--bg-cta);
     font-weight: 600;
     color: var(--color-cta);
-    box-shadow: 0 0 1px rgba(0, 0, 0, .5);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.5);
 }
 
 .price__cta:hover {
@@ -284,7 +282,6 @@ body {
     border: 1px solid #1fde82;
     box-shadow: 0 4px 10px #1fde82;
 }
-
 
 /* Testimony */
 
@@ -356,7 +353,7 @@ body {
 
 .questions__padding {
     padding: 0;
-    transition: padding .3s;
+    transition: padding 0.3s;
     border: 1px solid #2196f3;
     border-radius: 6px;
 }
@@ -377,6 +374,7 @@ body {
 }
 
 .questions__title {
+    text-align: left;
     display: flex;
     font-size: 20px;
     padding: 30px 0 30px;
@@ -395,7 +393,7 @@ body {
     align-items: center;
     align-self: flex-end;
     margin-left: 10px;
-    transition: transform .3s;
+    transition: transform 0.3s;
 }
 
 .questions__arrow--rotate {
@@ -405,7 +403,7 @@ body {
 .questions__show {
     text-align: left;
     height: 0;
-    transition: height .3s;
+    transition: height 0.3s;
 }
 
 .questions__img {
@@ -421,7 +419,7 @@ body {
 /* Footer */
 
 .footer {
-    background-color: #1D293F;
+    background-color: #1d293f;
 }
 
 .footer__title {
@@ -433,7 +431,6 @@ body {
 .footer__title,
 .footer__newsletter {
     color: white;
-
 }
 
 .footer__container {
@@ -481,13 +478,11 @@ body {
 .footer__input:focus {
     border: 2px solid #1fde82;
     box-shadow: 0 1px 1px #1fde82;
-
 }
 
 .footer__input:hover {
     border: 2px solid #1fde82;
     box-shadow: 0 1px 1px #1fde82;
-
 }
 
 .footer__submit {
@@ -528,12 +523,12 @@ body {
 
 /* MEDIA QUERIES */
 
-@media (max-width:800px){
-    .nav__menu{
+@media (max-width: 800px) {
+    .nav__menu {
         display: block;
     }
 
-    .nav__link--menu{
+    .nav__link--menu {
         position: fixed;
         background-color: black;
         top: 0;
@@ -547,20 +542,167 @@ body {
         z-index: 100;
         opacity: 0;
         pointer-events: none;
-        transition: .7s opacity;
+        transition: 0.7s opacity;
     }
 
-    .nav__link--show{
+    .nav__link--show {
         --show: block;
         opacity: 1;
         pointer-events: unset;
     }
 
-    .nav__close{
+    .nav__close {
         position: absolute;
         top: 30px;
         right: 30px;
         width: 30px;
         cursor: pointer;
+    }
+
+    .hero__title {
+        font-size: 2.5rem;
+    }
+
+    .about__main {
+        gap: 2em;
+    }
+
+    .about__icons:last-of-type {
+        grid-column: 1/-1;
+    }
+
+    .knowledge__container {
+        grid-template-columns: 1fr;
+        grid-template-rows: max-content 1fr;
+        gap: 3em;
+        text-align: center;
+    }
+
+    .knowledge__picture {
+        grid-row: 1/2;
+        justify-self: center;
+    }
+
+    .testimony__container {
+        grid-template-columns: 30px 1fr 30px;
+    }
+
+    .testimony__body {
+        grid-template-columns: 1fr;
+        grid-template-rows: max-content max-content;
+        gap: 3em;
+        justify-items: center;
+    }
+
+    .testimony__img {
+        width: 200px;
+        height: 200px;
+    }
+
+    .questions__copy {
+        width: 100%;
+    }
+
+    .footer__container {
+        flex-wrap: wrap;
+    }
+
+    .nav--footer {
+        width: 100%;
+        justify-items: center;
+    }
+
+    .nav__link--footer {
+        width: 100%;
+        justify-content: space-evenly;
+        margin: 0;
+    }
+
+    .footer__form {
+        width: 100%;
+        justify-content: space-evenly;
+    }
+
+    .footer__input {
+        flex: 1;
+    }
+}
+
+@media (max-width: 600px) {
+    .hero__title {
+        font-size: 2rem;
+    }
+
+    .hero__paragraph {
+        font-size: 1rem;
+    }
+
+    .subtitle {
+        font-size: 1.8rem;
+    }
+
+    .price__element {
+        width: 90%;
+    }
+
+    .price__element--best {
+        width: 90%;
+        /* padding: 40px; */
+    }
+
+    .testimony {
+        --padding-container: 60px 0;
+    }
+
+    .testimony__container {
+        grid-template-columns: 28px 1fr 28px;
+        gap: 0.9em;
+    }
+
+    .price__price {
+        font-size: 2rem;
+    }
+
+    .testimony__arrow {
+        width: 100%;
+    }
+
+    .testimony__course {
+        margin-top: 15px;
+    }
+
+    .questions__title {
+        font-size: 1rem;
+    }
+
+    .footer__title {
+        justify-self: start;
+        margin-bottom: 15px;
+    }
+
+    .nav--footer {
+        padding-bottom: 60px;
+    }
+
+    .footer__inputs {
+        flex-wrap: wrap;
+    }
+
+    .footer__input {
+        flex-basis: 100%;
+        margin: 0;
+        margin-bottom: 16px;
+    }
+
+    .footer__submit {
+        margin-right: auto;
+        margin-left: 0;
+
+        /* margin: 0;
+        width: 100%; */
+    }
+
+    .nav__link--footer {
+        justify-content: space-between;
     }
 }
